@@ -19,6 +19,7 @@ Version 5.2.6
   still attempt to close the file which would yield a null reference exception (bug #43332)      
 - fixed Sql null value exception when an attempt was made to reset the password and 
   require question and answer was false.  (bug #41408)  
+- fixed MySqlDataReader.GetGuid to be more robust in how it attempts to read guid values (bug #41452)     
       
 Version 5.2.5 - 11/14/2008
 - fixed problem with package registration that kept the DDEX provider from working (bug #40726)
